sources/si-brochure/1.08/sections-a1-en/01-1st-cgpm.adoc
[[cgpm1st1889]]
[%unnumbered]
== 1st CGPM, 1889

[[cgpm1st1889sanction]]
[%unnumbered]
=== {blank}

[.variant-title,type=quoted]
*Sanction of the international prototypes of the metre and the ((kilogram))* (<<CR1889-1>>)(((metre (stem:["unitsml(m)"]))))

____
The Conférence Générale des Poids et Mesures,

*considering*

* the "Compte rendu of the President of the Comité International des Poids et Mesures (CIPM)" and the "Report of the CIPM", which show that, by the collaboration of the French section of the International Metre Commission and of the CIPM, the fundamental measurements of the international and national prototypes of the metre and of the ((kilogram)) have been made with all the accuracy and reliability which the present state of science permits;
* that the international and national prototypes of the metre and the ((kilogram)) are made of an alloy of platinum with 10 per cent iridium, to within 0.0001;
* the equality in ((length)) of the international Metre and the equality in ((mass)) of the international Kilogram with the length of the Metre and the mass of the Kilogram kept in the Archives of France;
* that the differences between the national Metres and the international Metre lie within 0.01 millimetre and that these differences are based on a hydrogen thermometer scale which can always be reproduced thanks to the stability of hydrogen, provided identical conditions are secured;
* that the differences between the national Kilograms and the international Kilogram lie within 1 milligram;
* that the international Metre and Kilogram and the national Metres and Kilograms fulfil the requirements of the ((Metre Convention)),

*sanctions*

[upperalpha]
. As regards international prototypes:
+
--
[arabic]
.. The Prototype of the metre chosen by the CIPM. This prototype, at the temperature of melting ice, shall henceforth represent the metric unit of length.
.. The Prototype of the ((kilogram)) adopted by the CIPM. This prototype shall henceforth be considered as the unit of mass.
.. The hydrogen thermometer centigrade scale in terms of which the equations of the prototype Metres have been established.
--

. As regards national prototypes:

&#x200c;. . .
____

NOTE: The definition of the metre was abrogated in 1960 by the 11th CGPM 1960 (<<cgpm11th1960r6r6,Resolution 6>>). (((metre (stem:["unitsml(m)"]))))